--- a/doc/htmlcmds.dox
+++ b/doc/htmlcmds.dox
@@ -39,7 +39,7 @@ of a HTML tag are passed on to the HTML output only
 <tr><td valign="top">\startendhtmltag{CENTER}</td><td valign="top">Starts and ends a section of centered text.</td></tr>
 <tr><td valign="top">\startendhtmltag{CAPTION}</td><td valign="top">Starts and ends a caption. Use within a table only.</td></tr>
 <tr><td valign="top">\startendhtmltag{CITE}</td><td valign="top">Starts and ends a section of text displayed in a font specific for citations.</td></tr>
-<tr><td valign="top">\startendhtmltag{CODE}</td><td valign="top">Starts and ends a piece of text displayed in a typewriter font.</td></tr>
+<tr><td valign="top">\startendhtmltag{CODE}</td><td valign="top">Starts and ends a piece of text displayed in a typewriter font.
                        Note that only for C# code, this command is equivalent to
                        \ref cmdcode "\\code" (see \ref xmltag_code "\<code\>").</td></tr>
 <tr><td valign="top">\startendhtmltag{DD}</td><td valign="top">Starts and ends an item description.</td></tr>
@@ -53,7 +53,7 @@ of a HTML tag are passed on to the HTML output only
 <tr><td valign="top">\startalign\anchor htmltag_HR \addindex "\<HR\>"\endalign<tt>\<HR\></tt></td><td valign="top">Writes a horizontal ruler.</td></tr>
 <tr><td valign="top">\startendhtmltag{H1}</td><td valign="top">Starts and ends an unnumbered section.</td></tr>
 <tr><td valign="top">\startendhtmltag{H2}</td><td valign="top">Starts and ends an unnumbered subsection.</td></tr>
-<tr><td valign="top">\startendhtmltag{H3}</td><td valign="top">Starts and ends an unnumbered subsubsection.</td></tr></td></tr>
+<tr><td valign="top">\startendhtmltag{H3}</td><td valign="top">Starts and ends an unnumbered subsubsection.</td></tr>
 <tr><td valign="top">\startendhtmltag{H4}</td><td valign="top">Starts and ends an unnumbered subsubsection.</td></tr>
 <tr><td valign="top">\startendhtmltag{H5}</td><td valign="top">Starts and ends an unnumbered subsubsection.</td></tr>
 <tr><td valign="top">\startendhtmltag{H6}</td><td valign="top">Starts and ends an unnumbered subsubsection.</td></tr>
