--- a/doc/changelog.dox
+++ b/doc/changelog.dox
@@ -130,7 +130,7 @@
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11525">#11525</a> Translation error Dutch [<a href="https://github.com/doxygen/doxygen/commit/c9ba2f6e7a70ef289cf8cfc364cdaf610c472675">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11528">#11528</a> `\example{lineno}` does not generate the example [<a href="https://github.com/doxygen/doxygen/commit/071d46f216b047236787d56c6a8ffb607e0d748b">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11538">#11538</a> Internal inconsistency: scope for class std::hash&lt;...&gt; not found! [<a href="https://github.com/doxygen/doxygen/commit/4bb67ed141532f7784f4bced678fa37e5ffca46e">view</a>]</li>
-<li>issue <a href="https://github.com/doxygen/doxygen/issues/11541">#11541</a> Template specialisations get copies of members of the primary template [<a href="https://github.com/doxygen/doxygen/commit/200cec9b87fa544f39deeb96966568985f40aea8">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/11541">#11541</a> Template specializations get copies of members of the primary template [<a href="https://github.com/doxygen/doxygen/commit/200cec9b87fa544f39deeb96966568985f40aea8">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11543">#11543</a> Doxygen V.1.14 is very slow [<a href="https://github.com/doxygen/doxygen/commit/d29e2ddf4fe62d5a51330fee3e33c0e9ed683e62">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11549">#11549</a> Leftover variable in CSS (validation and possible logic issue) [<a href="https://github.com/doxygen/doxygen/commit/5dacf4107e8f4e126b7b5569eaeb6a1c17d26d7b">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11557">#11557</a> @tableofcontents shows &lt;tt&gt; tags for MarkDown headings with inline code [<a href="https://github.com/doxygen/doxygen/commit/2604e3f03414529601dc8335f99b8a30c25f1389">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/5421849e22dc1f1ad8c2de40b5ede75270b04fa4">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/a3bd787d762277baef5228c3fd5ea4f591df6ad7">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/c2ada5724c2360d1258f8bc8d64880d301d5fd20">view</a>]</li>
