Correction some quotes in changelog
Correction some quotes in changelog

--- a/doc/changelog.dox
+++ b/doc/changelog.dox
@@ -138,7 +138,7 @@
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11565">#11565</a> subpages named with capital letters are not found by LaTeX [<a href="https://github.com/doxygen/doxygen/commit/8acb984fa259223895b6394797aabd8de86c3934">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11569">#11569</a> Doxygen might generate invalid tag file, breaking downstream project documentation (no uniquely matching class member found for) [<a href="https://github.com/doxygen/doxygen/commit/58cc4f3509521d86b24f769b45ef3eea092334d4">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/b1bbfe8b1ce6e5556192bfc7ebf0c3cd864d0e44">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/11579">#11579</a> HTML-tables in markdown files with empty lines between the tags not properly rendered [<a href="https://github.com/doxygen/doxygen/commit/7a10ea475449e3e6f54c20e426bcdae11b2cd513">view</a>]</li>
-<li>Warning ` mismatch `#if` / #endif` from preprocessor [<a href="https://github.com/doxygen/doxygen/commit/46e6a42f2cc41eeafd3bf150c7f9ca69380f0087">view</a>] and [<a href="https://github.com/doxygen/doxygen/commit/65861fb8cbc85f853026becab3ec46fd209332a3">view</a>]</li>
+<li>Warning mismatch `#if` / `#endif` from preprocessor [<a href="https://github.com/doxygen/doxygen/commit/46e6a42f2cc41eeafd3bf150c7f9ca69380f0087">view</a>] and [<a href="https://github.com/doxygen/doxygen/commit/65861fb8cbc85f853026becab3ec46fd209332a3">view</a>]</li>
 <li>Fixed issue parsing raw strings [<a href="https://github.com/doxygen/doxygen/commit/1a4eacf99a1bab646cbe8ad03d586fc5e2ee6103">view</a>]</li>
 <li>Correctly handle invisible sections in the layout file
 [<a href="https://github.com/doxygen/doxygen/commit/ee1bb44f23724210b95ea4d4d87fcbd52128ad0e">view</a>],
