--- a/testing/110_backticks.dox
+++ b/testing/110_backticks.dox
@@ -7,8 +7,13 @@ Text `it's cool`. with embedded '
 Text with ``double`` backtick.  
 Text with ``double and `single` form`` of backticks.  
 Text with ``double backtick `ending``` in triple backtick.  
+Text with `double backtick `` inside single` backtick.  
 Text with \`escaped\` backticks.  
 Text with triple ``` backtick not at the start of the line.  
+Text with `X``Y` embedded double backticks inside backticks.  
+Text in double quotes ``left`right'' with embedded backtick.  
+Text in double quotes ``left'right'' with embedded single quote.  
+Text in single quotes `left''right' with embedded double quote.  
 ```
 Text inside triple backticks
 Nested `single` backtick
